Mon May 17 10:11:46 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Plan_Handler.h:
        * DnC/Config_Handlers/Domain_Handler.h:

          Replaced the use of a Synch_Mutex with that of a Null_Mutex as
          there will not be multiple threads parsing the handler.

Mon May 17 11:24:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DnC/Config_Handlers/Plan_Handler.h:
          Fixed fuzz error

Sun May 16 12:39:40 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.h:
        * DnC/Config_Handlers/DnC_Dump.cpp:

          Added dump functions to print out values encoded within a
          CORBA::Any. Currently, this handles only basic types, support
          for types encoded using CORBA::DnyAny needs to be incorporated.

Sun May 16 01:17:44 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Changed the data structures needed by the Execution
          data model, to conform to the model given in the
          specification

        * DnC/Config_Handlers/Plan_Handler.cpp:
        * DnC/Config_Handlers/Plan_Handler.h:
        * DnC/Config_Handlers/Config_Handlers.mpc:
        * DnC/Config_Handlers/Domain_Handler.cpp:

          Added a new top level handler for the DeploymentPlan.

          Since the IDL changed, i had to change 11 other handlers
          and included them within the top level handler.

          Updated the .mpc file accordingly.

Fri May 14 20:53:37 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Separated the data model definitions from the
          management model definitions.

Fri May 14 15:28:56 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:
        * DnC/tests/Config_Handlers/Domain_Handler_Test.cpp:

          Updated Domain_Handler_Test.cpp to use the dump