@@ -126,6 +126,10 @@ namespace CIAO
             }
         }
 
+      this->update_mdd_refs (plan);
+      this->update_idd_refs (plan);
+      this->update_pspe_refs (plan);
+      this->update_pspr_refs (plan);
       return;
     }
 
@@ -2254,6 +2258,120 @@ namespace CIAO
             }
         }
       return;
+    }
+
+    void Plan_Handler::update_mdd_refs (Deployment::DeploymentPlan& plan)
+    {
+      CORBA::ULong x;
+      CORBA::ULong y;
+      int ref_value;
+      int orig_value;
+      ACE_TString ref_name;
+
+      for (x = 0; x < plan.implementation.length (); ++x)
+        {
+          for (y = 0; y < plan.implementation[x].artifact.length (); ++y)
+            {
+              ref_value = plan.implementation[x].artifact[y];
+              if (idref_map_.find (ref_value, ref_name) == 0)
+                {
+                  if (id_map_.find (ref_name, orig_value) == 0)
+                    {
+                      plan.implementation[x].artifact[y] = orig_value;
+                    }
+                }
+            }  
+        }
+    }
+
+    void Plan_Handler::update_idd_refs (Deployment::DeploymentPlan& plan)
+    {
+      CORBA::ULong x;
+      CORBA::ULong y;
+      int ref_value;
+      int orig_value;
+      ACE_TString ref_name;
+
+      for (x = 0; x < plan.instance.length (); ++x)
+        {
+          for (y = 0; y < plan.instance[x].implementation.length (); ++y)
+            {
+              ref_value = plan.instance[x].implementation[y];
+              if (idref_map_.find (ref_value, ref_name) == 0)
+                {
+                  if (id_map_.find (ref_name, orig_value) == 0)
+                    {
+                      plan.instance[x].implementation[y] = orig_value;
+                    }
+                }
+            }  
+        }
+    }
+
+    void Plan_Handler::update_pspe_refs (Deployment::DeploymentPlan& plan)
+    {
+      CORBA::ULong x;
+      CORBA::ULong y;
+      CORBA::ULong z;
+      int ref_value;
+      int orig_value;
+      ACE_TString ref_name;
+
+      for (x = 0; x < plan.connection.length (); ++x)
+        {
+          for (y = 0; y < plan.connection[x].internalEndpoint.length (); ++y)
+            {
+              for (z = 0; 
+                   z < plan.connection[x].internalEndpoint[y].
+                       instance.length ();
+                   ++z)
+                {
+                  ref_value = plan.connection[x].internalEndpoint[y].
+                              instance[z];
+                  if (idref_map_.find (ref_value, ref_name) == 0)
+                    {
+                      if (id_map_.find (ref_name, orig_value) == 0)
+                        {
+                          plan.connection[x].internalEndpoint[y].
+                          instance[z] = orig_value;
+                        }
+                    }
+                }
+            }  
+        }
+    }
+
+    void Plan_Handler::update_pspr_refs (Deployment::DeploymentPlan& plan)
+    {
+      CORBA::ULong x;
+      CORBA::ULong y;
+      CORBA::ULong z;
+      int ref_value;
+      int orig_value;
+      ACE_TString ref_name;
+
+      for (x = 0; x < plan.externalProperty.length (); ++x)
+        {
+          for (y = 0; y < plan.externalProperty[x].delegatesTo.length (); ++y)
+            {
+              for (z = 0; 
+                   z < plan.externalProperty[x].delegatesTo[y].
+                       instance.length ();
+                   ++z)
+                {
+                  ref_value = plan.externalProperty[x].delegatesTo[y].
+                              instance[z];
+                  if (idref_map_.find (ref_value, ref_name) == 0)
+                    {
+                      if (id_map_.find (ref_name, orig_value) == 0)
+                        {
+                          plan.externalProperty[x].delegatesTo[y].
+                          instance[z] = orig_value;
+                        }
+                    }
+                }
+            }  
+        }
     }
 
   }
